Fix collapse/expand icon showing above table head

--- a/src/ui/index.sass
+++ b/src/ui/index.sass
@@ -29,7 +29,8 @@ table.tree-table
   th
     position: sticky;
     background-color: white;
-    top: 0;
+    top: 0
+    z-index: 9999;
 
   span[data-tooltip]
     border: none;
